# HWFrontQML

./: .gitignore  .gitmodules  AddIpForm.qml  AddWidgetDialog.qml  AliasInputDialog.qml  CMakeLists.txt  ConnectedDeviceCard.qml  CustomItem.qml  DeviceAliasDialog.qml  DeviceLayoutDialog.qml  DeviceSettingsDialog.qml  DeviceStatusHeader.qml  HWFrontQML.pro  MetricCard.qml  MetricVariantDialog.qml  PageAuthForm.qml  PageDevicesInfo.qml  README.en.md  README.md  README.ru.md  RawLayioutConnection.qml  StatusIndicator.qml  WidgetLayoutDialog.qml  android-HWFrontQML-deployment-settings.json  app.rc  core.cpp  core.h  dashboardmetricsmodel.cpp  dashboardmetricsmodel.h  main.cpp  main.qml  metricdescriptor.h  metricsservice.cpp  metricsservice.h  qml.qrc  qtquickcontrols2.conf  session.h  sessionlistmodel.cpp  sessionlistmodel.h  sessionmanager.cpp  (+2 more)
.github/workflows/: build.yml
HardwareMonitor/: CMakeLists.txt  hardwaredevice.h  hardwarekind.h  hardwaresnapshot.cpp  hardwaresnapshot.h  legacydesktopdeviceadapter.cpp  legacydesktopdeviceadapter.h  lhmclassification.cpp  lhmsnapshotparser.cpp  measurement.h  metrickind.h  parsedsensorvalue.cpp  unit.h
android/: AndroidManifest.xml  build.gradle  gradle.properties
docs/: multi-device-contract.md
progbarstyles/: Cir_1.qml  Cir_2.qml  Cir_3.qml  Cir_4.qml  Cir_5.qml  Cir_6.qml  Cir_7.qml  Cir_8.qml  Cir_9.qml  Hor_1.qml  Hor_2.qml  Hor_3.qml  Hor_4.qml  Ver_1.qml
qml/: Theme.qml  main.qml
qml/components/: ConnectedDeviceCard.qml  DashboardCard.qml  DeviceStatusHeader.qml  MetricCard.qml  NetworkMetricCard.qml  RawLayioutConnection.qml
qml/controls/: LinearBusyIndicator.qml  StatusIndicator.qml  WindowResizeFrame.qml  WindowTitleBar.qml
qml/dialogs/: AliasInputDialog.qml  DeviceSettingsDialog.qml  NetworkDisplayModeDialog.qml  SettingsDialog.qml  WidgetLayoutDialog.qml
qml/pages/: PageAuthForm.qml  PageDevicesInfo.qml
qml/themes/: BasePalette.qml  GraphitePalette.qml  NightPalette.qml  OledPalette.qml  SoftLightPalette.qml
src/app/: languagemanager.cpp  languagemanager.h  main.cpp  thememanager.cpp  thememanager.h
src/core/: core.cpp  core.h  dashboardmetricprofile.cpp  dashboardmetricprofile.h  devicemetricfactory.cpp  devicemetricfactory.h  displaymode.h  metricdescriptor.h  metricsservice.cpp  metricsservice.h  sessionmanager.cpp  sessionmanager.h
src/lhmparser/: lhmclassification.h  lhmsnapshotparser.cpp  lhmsnapshotparser.h  parsedsensorvalue.h
src/linuxadapter/: linuxsnapshotparser.cpp  linuxsnapshotparser.h
src/models/: dashboardmetricsmodel.cpp  dashboardmetricsmodel.h  sessionlistmodel.cpp  sessionlistmodel.h
translations/: HWFrontQML_ru.ts
